--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "brindev",
   "version": "0.1.0",
+  "homepage": "https://brindeveloper.github.io/brindeveloper-portfolio",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "gh-pages": "^6.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
